--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,6 +10,7 @@
          src="https://openui5.hana.ondemand.com/resources/sap-ui-core-dbg.js"
          data-sap-ui-theme="sap_bluecrystal"
          data-sap-ui-libs="sap.m"
+         data-sap-ui-bindingSyntax="complex"
          data-sap-ui-compatVersion="edge"
          data-sap-ui-preload="async" 
          data-sap-ui-resourceroots='{"sap.ui.demo.wt": "./"}'>
